# cmake-project-template

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt
